Mon, Dec 4, 2023, 12:30 PM -05:00

--- a/templates/gameboard2.html
+++ b/templates/gameboard2.html
@@ -17,6 +17,13 @@
                     <img src="/static/mem_church.jpeg" alt="mem church" style="z-index:10">
                 </div>
             </div>
+            <div style="position: relative; width: 50%; max-width: 300px">
+                <img src="/static/gsas.jpeg" alt="gsas" style="display: block; width: 100%; height: auto">
+                <div style="position: absolute">
+                    <img src="/static/trophy.png" alt="trophy" style="bottom: 0">
+                    <img src="/static/mem_church.jpeg" alt="mem church" style="width: 100%">
+                </div>
+            </div>
             <h3 class="header">BACK TO MY CARDS <br>
                 <button><a href="/mycards">MY CARDS</a></button>
             </h3>
