--- a/templates/gameboard2.html
+++ b/templates/gameboard2.html
@@ -17,11 +17,13 @@
                     <img src="/static/mem_church.jpeg" alt="mem church" style="z-index:10">
                 </div>
             </div>
-            <div style="position: relative; width: 50%; max-width: 300px">
-                <img src="/static/gsas.jpeg" alt="gsas" style="display: block; width: 100%; height: auto">
+            <div style="position: relative">
+                <img src="/static/gsas.jpeg" alt="gsas" style="width: 100%">
+                <div style="position: absolute; bottom: 8px; left: 16px">
+                    <img src="/static/mem_church.jpeg" alt="mem church">
+                </div>
                 <div style="position: absolute">
                     <img src="/static/trophy.png" alt="trophy" style="bottom: 0">
-                    <img src="/static/mem_church.jpeg" alt="mem church" style="width: 100%">
                 </div>
             </div>
             <h3 class="header">BACK TO MY CARDS <br>
