Mon, Dec 4, 2023, 12:36 PM -05:00

--- a/templates/gameboard2.html
+++ b/templates/gameboard2.html
@@ -10,21 +10,10 @@
                     CS50 CLUE
                 </div>
             </h1>
-            <div style="display: flex">
-                <img src="/static/gsas.jpeg" alt="gsas" style="width:700px; top: 0">
-                <div style="position: absolute">
-                    <img src="/static/trophy.png" alt="trophy" style="z-index:1">
-                    <img src="/static/mem_church.jpeg" alt="mem church" style="z-index:10">
-                </div>
-            </div>
             <div style="position: relative">
-                <img src="/static/gsas.jpeg" alt="gsas" style="width: 100%">
-                <div style="position: absolute; bottom: 8px; left: 16px">
-                    <img src="/static/mem_church.jpeg" alt="mem church">
-                </div>
-                <div style="position: absolute">
-                    <img src="/static/trophy.png" alt="trophy" style="bottom: 0">
-                </div>
+                <img src="/static/gsas.jpeg" alt="gsas" style="width:100%">
+                <img src="/static/trophy.png" alt="trophy" style="position: absolute; top: 0px; left: 0px">
+                <img src="/static/mem_church.jpeg" alt="mem church" style="position: absolute; bottom: 0px; right: 0px">
             </div>
             <h3 class="header">BACK TO MY CARDS <br>
                 <button><a href="/mycards">MY CARDS</a></button>
