Mon, Dec 4, 2023, 12:39 PM -05:00

--- a/templates/gameboard2.html
+++ b/templates/gameboard2.html
@@ -12,7 +12,9 @@
             </h1>
             <div style="position: relative">
                 <img src="/static/gsas.jpeg" alt="gsas" style="width:100%">
-                <img src="/static/trophy.png" alt="trophy" style="position: absolute; top: 0px; left: 0px">
+                <button name="room" value=" type="submit" style="position: absolute; top: 0px; left: 0px">
+                    <img src="/static/trophy.png" alt="trophy">
+                </button>
                 <img src="/static/mem_church.jpeg" alt="mem church" style="position: absolute; bottom: 0px; right: 0px">
             </div>
             <h3 class="header">BACK TO MY CARDS <br>
