--- a/templates/gameboard2.html
+++ b/templates/gameboard2.html
@@ -12,7 +12,7 @@
             </h1>
             <div style="position: relative">
                 <img src="/static/gsas.jpeg" alt="gsas" style="width:100%">
-                <button name="room" value="Mem Church" type="submit" style="position: absolute; top: 0px; left: 0px">
+                <button name="room" value="Harvard Hall" type="submit" style="position: absolute; top: 0px; left: 0px">
                     <img src="/static/trophy.png" alt="trophy">
                 </button>
                 <img src="/static/mem_church.jpeg" alt="mem church" style="position: absolute; bottom: 0px; right: 0px">
