--- a/templates/gameboard2.html
+++ b/templates/gameboard2.html
@@ -13,9 +13,23 @@
             <div style="position: relative">
                 <img src="/static/gsas.jpeg" alt="gsas" style="width:100%">
                 <button name="room" value="Harvard Hall" type="submit" style="position: absolute; top: 0px; left: 0px">
-                    <img src="/static/trophy.png" alt="trophy">
+                    <img src="/static/harvard_hall.jpeg" alt="harvard hall">
                 </button>
-                <img src="/static/mem_church.jpeg" alt="mem church" style="position: absolute; bottom: 0px; right: 0px">
+                <button name="room" value="Mem Church" type="submit" style="position: absolute; top: 0px; left: 0px">
+                    <img src="/static/mem_church.jpeg" alt="mem church">
+                </button>
+                <button name="room" value="Harvard Hall" type="submit" style="position: absolute; top: 0px; left: 0px">
+                    <img src="/static/harvard_hall.jpeg" alt="harvard hall">
+                </button>
+                <button name="room" value="Harvard Hall" type="submit" style="position: absolute; top: 0px; left: 0px">
+                    <img src="/static/harvard_hall.jpeg" alt="harvard hall">
+                </button>
+                <button name="room" value="Harvard Hall" type="submit" style="position: absolute; top: 0px; left: 0px">
+                    <img src="/static/harvard_hall.jpeg" alt="harvard hall">
+                </button>
+                <button name="room" value="Harvard Hall" type="submit" style="position: absolute; top: 0px; left: 0px">
+                    <img src="/static/harvard_hall.jpeg" alt="harvard hall">
+                </button>
             </div>
             <h3 class="header">BACK TO MY CARDS <br>
                 <button><a href="/mycards">MY CARDS</a></button>
