Mon, Dec 4, 2023, 1:37 PM -05:00

--- a/templates/gameboard2.html
+++ b/templates/gameboard2.html
@@ -12,10 +12,10 @@
             </h1>
             <div style="position: relative">
                 <img src="/static/gsas.jpeg" alt="gsas" style="width:100%">
-                <button name="room" value="Harvard Hall" type="submit" style="position: absolute; top: 0px; left: 0px">
+                <button class="room" name="room" value="Harvard Hall" type="submit" style="top: 0px; left: 0px">
                     <img src="/static/harvard_hall.jpeg" alt="harvard hall">
                 </button>
-                <button name="room" value="Mem Church" type="submit" style="position: absolute; top: 0px; left: 0px">
+                <button class="room" name="room" value="Mem Church" type="submit" style="top: 0px; left: 0px">
                     <img src="/static/mem_church.jpeg" alt="mem church">
                 </button>
             </div>
