Mon, Dec 4, 2023, 1:38 PM -05:00

--- a/templates/gameboard2.html
+++ b/templates/gameboard2.html
@@ -10,7 +10,7 @@
                     CS50 CLUE
                 </div>
             </h1>
-            <div style="position: relative">
+            <div class="container">
                 <img src="/static/gsas.jpeg" alt="gsas" style="width:100%">
                 <button class="room" name="room" value="Harvard Hall" type="submit" style="top: 0px; left: 0px">
                     <img src="/static/harvard_hall.jpeg" alt="harvard hall">
