Mon, Dec 4, 2023, 1:41 PM -05:00

--- a/templates/gameboard2.html
+++ b/templates/gameboard2.html
@@ -15,8 +15,10 @@
                 <button class="room" name="room" value="Harvard Hall" type="submit" style="top: 0px; left: 0px">
                     <img src="/static/harvard_hall.jpeg" alt="harvard hall">
                 </button>
-                <button class="room" name="room" value="Mem Church" type="submit" style="top: 0px; left: 0px">
+                <button class="room" name="room" value="Mem Church" type="submit" style="top: 0px; right: 0px">
                     <img src="/static/mem_church.jpeg" alt="mem church">
+                </button>
+                <button class="room" name="room" value="Canaday" type="submit" style="top: 0px; left: 0px">
                 </button>
             </div>
             <h3 class="header">BACK TO MY CARDS <br>
