--- a/templates/gameboard2.html
+++ b/templates/gameboard2.html
@@ -19,6 +19,13 @@
                     <img src="/static/mem_church.jpeg" alt="mem church">
                 </button>
                 <button class="room" name="room" value="Canaday" type="submit" style="top: 0px; left: 0px">
+                    <p>Canaday</p>
+                </button>
+                <button class="room" name="room" value="GSAS" type="submit" style="top: 0px; left: 0px">
+                    <img src="/static/gsas.jpeg" alt="""gsas">
+                </button>
+                <button>
+                    <img src="""/static/widener.jpeg
                 </button>
             </div>
             <h3 class="header">BACK TO MY CARDS <br>
