--- a/templates/gameboard2.html
+++ b/templates/gameboard2.html
@@ -25,7 +25,7 @@
                     <img src="/static/gsas.jpeg" alt="""gsas">
                 </button>
                 <button>
-                    <img src="/static/widener.jpeg" name="
+                    <img src="/static/widener.jpeg" name="room" value="Widener" 
                 </button>
             </div>
             <h3 class="header">BACK TO MY CARDS <br>
