--- a/templates/gameboard2.html
+++ b/templates/gameboard2.html
@@ -22,10 +22,10 @@
                     <p>Canaday</p>
                 </button>
                 <button class="room" name="room" value="GSAS" type="submit" style="top: 0px; left: 0px">
-                    <img src="/static/gsas.jpeg" alt="""gsas">
+                    <img src="/static/gsas.jpeg" alt="gsas">
                 </button>
-                <button>
-                    <img src="/static/widener.jpeg" name="room" value="Widener" 
+                <button name="room" value="Widener" type="submit" style="top: 0px; left: 0px">
+                    <img src="/static/widener.jpeg" alt="widener">
                 </button>
             </div>
             <h3 class="header">BACK TO MY CARDS <br>
