Mon, Dec 4, 2023, 1:53 PM -05:00

--- a/templates/gameboard2.html
+++ b/templates/gameboard2.html
@@ -21,10 +21,10 @@
                 <button class="room" name="room" value="Canaday" type="submit" style="top: 0px; left: 0px">
                     <p>Canaday</p>
                 </button>
-                <button class="room" name="room" value="GSAS" type="submit" style="top: 0px; left: 0px">
+                <button class="room" name="room" value="GSAS" type="submit" style="top: 15%; left: 0px">
                     <img src="/static/gsas.jpeg" alt="gsas">
                 </button>
-                <button name="room" value="Widener" type="submit" style="top: 0px; left: 0px">
+                <button class="room" name="room" value="Widener" type="submit" style="top: 0px; left: 15%">
                     <img src="/static/widener.jpeg" alt="widener">
                 </button>
             </div>
