Mon, Dec 4, 2023, 2:02 PM -05:00

--- a/templates/mycards.html
+++ b/templates/mycards.html
@@ -15,7 +15,7 @@
             <h1 class="header1">The Card Options</h1>
             <button><a href="/allcards">All Cards</a></button>
             <h1 class="header1">The Game Board</h1>
-            <button><a href="/gameboard">Game Board</a></button>
+            <button><a href="/gameboard2">Game Board</a></button>
         </form>
     </body>
 </html>
