Mon, Dec 4, 2023, 2:05 PM -05:00

--- a/templates/allcards.html
+++ b/templates/allcards.html
@@ -67,6 +67,16 @@
                         <img src="/static/remy.jpeg" alt="remy">
                         <h4>Remy</h4>
                     </td>
+                    <td class="card">
+                        <h2>Person</h2>
+                        <img src="/static/pres_gay.jpeg" alt="david malan">
+                        <h4>David Malan</h4>
+                    </td>
+                    <td class="card">
+                        <h2>Person</h2>
+                        <img src="/static/remy.jpeg" alt="dean khurana">
+                        <h4>Dean Khurana</h4>
+                    </td>
                 </tr>
         </form>
     </body>
