Mon, Dec 4, 2023, 2:07 PM -05:00

--- a/templates/allcards.html
+++ b/templates/allcards.html
@@ -74,7 +74,7 @@
                     </td>
                     <td class="card">
                         <h2>Person</h2>
-                        <img src="/static/remy.jpeg" alt="dean khurana">
+                        <img src="/static/dean_k.jpeg" alt="dean khurana">
                         <h4>Dean Khurana</h4>
                     </td>
                 </tr>
