Mon, Dec 4, 2023, 2:09 PM -05:00

--- a/templates/allcards.html
+++ b/templates/allcards.html
@@ -69,7 +69,7 @@
                     </td>
                     <td class="card">
                         <h2>Person</h2>
-                        <img src="/static/pres_gay.jpeg" alt="david malan">
+                        <img src="/static/malan.jpeg" alt="malan">
                         <h4>David Malan</h4>
                     </td>
                     <td class="card">
