Mon, Dec 4, 2023, 2:12 PM -05:00

--- a/templates/allcards.html
+++ b/templates/allcards.html
@@ -47,7 +47,16 @@
                     </td>
                     <td class="card">
                         <h2>Place</h2>
-                        <img src="/static/widner.jpeg" alt="widner">
+                        <img src="/static/widener.jpeg" alt="widner">
+                        <h4>Widner</h4>
+                    </td>
+                    <td class="card">
+                        <h2>Place</h2>
+                        <img src="/static/canaday.jpeg" alt="canaday">
+                        <h4>Canaday</h4>
+                    </td> <td class="card">
+                        <h2>Place</h2>
+                        <img src="/static/widener.jpeg" alt="widner">
                         <h4>Widner</h4>
                     </td>
                 </tr>
