Mon, Dec 4, 2023, 2:15 PM -05:00

--- a/templates/allcards.html
+++ b/templates/allcards.html
@@ -15,7 +15,7 @@
                     </td>
                     <td class="card">
                         <h2>Weapon</h2>
-                        <img src="/static/rope.png" alt="rope">
+                        <img src="/static/ropee.jpeg" alt="rope">
                         <h4>Rope</h4>
                     </td>
                     <td class="card">
@@ -56,8 +56,8 @@
                         <h4>Canaday</h4>
                     </td> <td class="card">
                         <h2>Place</h2>
-                        <img src="/static/widener.jpeg" alt="widner">
-                        <h4>Widner</h4>
+                        <img src="/static/mass_hall.jpeg" alt="massachusetts hall">
+                        <h4>Massachusetts Hall</h4>
                     </td>
                 </tr>
                 <tr>
