Mon, Dec 4, 2023, 2:19 PM -05:00

--- a/templates/allcards.html
+++ b/templates/allcards.html
@@ -15,7 +15,7 @@
                     </td>
                     <td class="card">
                         <h2>Weapon</h2>
-                        <img src="/static/ropee.jpeg" alt="rope">
+                        <img src="/static/rope.png" alt="rope">
                         <h4>Rope</h4>
                     </td>
                     <td class="card">
@@ -25,7 +25,7 @@
                     </td>
                     <td class="card">
                         <h2>Weapon</h2>
-                        <img src="/static/knife.jpeg" alt="knife">
+                        <img src="/static/nife.webp" alt="knife">
                         <h4>Knife</h4>
                     </td>
                     <td class="card">
