Mon, Dec 4, 2023, 2:25 PM -05:00

--- a/templates/allcards.html
+++ b/templates/allcards.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <form action="/allcards" method="post">
-            <table>
+            <table class="table">
                 <tr>
                     <td class="card">
                             <h2>Weapon</h2>
