--- a/static/styles.css
+++ b/static/styles.css
@@ -17,15 +17,14 @@
 }
 
 .card {
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
-    width: 15%;
-    border-radius: 5px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    width: 30%;
+    border-radius: 7px;
     text-align: center;
 }
 
 .card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 8px 16px 0 rgba(150, 0, 0, 0.8);
 }
 
 .container {
@@ -34,11 +33,6 @@
 
 .room {
     position: absolute;
-}
-
-.table {
-    table-layout: auto;
-    width: 200px;
 }
 
 
