--- a/templates/allcards.html
+++ b/templates/allcards.html
@@ -1,4 +1,11 @@
 <!DOCTYPE html>
+<style>
+table, th, td {
+  border: 1px solid black;
+  border-radius: 10px;
+  width: 30%;
+}
+</style>
 
 <html lang="en">
     <head>
