Mon, Dec 4, 2023, 2:37 PM -05:00

--- a/static/styles.css
+++ b/static/styles.css
@@ -18,7 +18,7 @@
 
 .card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    width: 30%;
+    width: 20px;
     border-radius: 7px;
     text-align: center;
 }
@@ -35,9 +35,5 @@
     position: absolute;
 }
 
-.table {
-    width: 20px
-    height: 30%
-}
 
 
