--- a/static/styles.css
+++ b/static/styles.css
@@ -19,6 +19,7 @@
 .card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     width: 20%;
+    height: 33%;
     border-radius: 7px;
     text-align: center;
 }
@@ -35,8 +36,7 @@
     position: absolute;
 }
 
-.table {
+.card img {
     width: 100%;
+    height: auto;
 }
-
-
