--- a/templates/guess.html
+++ b/templates/guess.html
@@ -8,11 +8,11 @@
         <form action="/guess" method="post">
             <p>guess page</p>
             <p>Location: {{ get_flashed_messages() | join(" ")}}</p>
-            <select class="form-select mx-auto w-auto" id="weapon" name="weapon">
+            <select class="header" id="weapon" name="weapon">
                 <option disabled selected>Select a weapon</option>
                 <option value="weapon1">weapon- eventually, use a for-loop to go through all the player's weapon cards</option>
             </select>
-            <select class="form-select mx-auto w-auto" id="person" name="person">
+            <select class="header" id="person" name="person">
                 <option disabled selected>Select a suspect</option>
                 <option value="person1">people- eventually, use a for-loop to go through all the player's people cards</option>
             </select>
