--- a/templates/guess.html
+++ b/templates/guess.html
@@ -7,12 +7,12 @@
     <body>
         <form action="/guess" method="post">
             <p>guess page</p>
-            <p>Location: {{ get_flashed_messages() | join(" ")}}</p>
-            <select class="header" id="weapon" name="weapon">
+            <p class="header">Location: {{ get_flashed_messages() | join(" ")}}</p>
+            <select class="text" id="weapon" name="weapon">
                 <option disabled selected>Select a weapon</option>
                 <option value="weapon1">weapon- eventually, use a for-loop to go through all the player's weapon cards</option>
             </select>
-            <select class="header" id="person" name="person">
+            <select class="text" id="person" name="person">
                 <option disabled selected>Select a suspect</option>
                 <option value="person1">people- eventually, use a for-loop to go through all the player's people cards</option>
             </select>
