Mon, Dec 4, 2023, 2:57 PM -05:00

--- a/templates/mycards.html
+++ b/templates/mycards.html
@@ -14,6 +14,7 @@
             </div>
             <h1 class="header1">The Card Options</h1>
             <button><a href="/allcards">All Cards</a></button>
+            <button type="button" onclick="
             <h1 class="header1">The Game Board</h1>
             <button><a href="/gameboard2">Game Board</a></button>
         </form>
