--- a/templates/mycards.html
+++ b/templates/mycards.html
@@ -14,7 +14,7 @@
             </div>
             <h1 class="header1">The Card Options</h1>
             <button><a href="/allcards">All Cards</a></button>
-            <button type="button" onclick="">View all cards</button>
+            <button type="button" onclick="document.getElementById('allCards').style.display ='block'">View all cards</button>
             <h1 class="header1">The Game Board</h1>
             <button><a href="/gameboard2">Game Board</a></button>
         </form>
