--- a/templates/allcards.html
+++ b/templates/allcards.html
@@ -87,6 +87,10 @@
                         <h4>Dean Khurana</h4>
                     </td>
                 </tr>
+                <tr>
+                    <td class="card">
+                        <img src={{}}
+                </tr>
         </form>
     </body>
 </html>
