Tue, Dec 5, 2023, 1:19 PM -05:00

--- a/templates/allcards.html
+++ b/templates/allcards.html
@@ -89,7 +89,7 @@
                 </tr>
                 <tr>
                     <td class="card">
-                        <img src={{ test["path"] }}>
+                        <img src={{ test['path'] }}>
                 </tr>
         </form>
     </body>
