Tue, Dec 5, 2023, 1:24 PM -05:00

--- a/templates/allcards.html
+++ b/templates/allcards.html
@@ -90,6 +90,7 @@
                 <tr>
                     <td class="card">
                         <img src="{{ test.path }}">
+                        <h4>{{ test.path }}</h4>
                 </tr>
         </form>
     </body>
