Tue, Dec 5, 2023, 1:25 PM -05:00

--- a/templates/allcards.html
+++ b/templates/allcards.html
@@ -89,8 +89,8 @@
                 </tr>
                 <tr>
                     <td class="card">
-                        <img src="{{ test.path }}">
-                        <h4>{{ test.path }}</h4>
+                        <img src="{{ test[0].path }}">
+                        <h4>{{ test[0].path }}</h4>
                 </tr>
         </form>
     </body>
