Tue, Dec 5, 2023, 1:37 PM -05:00

--- a/templates/allcards.html
+++ b/templates/allcards.html
@@ -25,7 +25,7 @@
                     </td>
                     <td class="card">
                         <h2>Weapon</h2>
-                        <img src="/static/nife.webp" alt="knife">
+                        <img src="/static/kife.webp" alt="knife">
                         <h4>Knife</h4>
                     </td>
                     <td class="card">
