Tue, Dec 5, 2023, 1:56 PM -05:00

--- a/templates/allcards.html
+++ b/templates/allcards.html
@@ -8,6 +8,10 @@
         <form action="/allcards" method="post">
             <table class="table">
                 <tr>
+                    {{ for }}
+                </tr>
+
+                <tr>
                     <td class="card">
                             <h2>Weapon</h2>
                             <img src="/static/lead_pipe.jpeg" alt="lead pipe">
