--- a/templates/allcards.html
+++ b/templates/allcards.html
@@ -8,7 +8,8 @@
         <form action="/allcards" method="post">
             <table class="table">
                 <tr>
-                    {{ for }}
+                    {{ for card in cards }}
+                    
                 </tr>
 
                 <tr>
