Tue, Dec 5, 2023, 2:00 PM -05:00

--- a/templates/allcards.html
+++ b/templates/allcards.html
@@ -8,8 +8,8 @@
         <form action="/allcards" method="post">
             <table class="table">
                 <tr>
-                    {{ for card in cards }}
-                    
+                    {% for card in cards %}
+                    {% endfor %}
                 </tr>
 
                 <tr>
