Tue, Dec 5, 2023, 2:07 PM -05:00

--- a/templates/allcards.html
+++ b/templates/allcards.html
@@ -7,6 +7,7 @@
     <body>
         <form action="/allcards" method="post">
             <table class="table">
+                {% for i in range 3 %}
                 <tr>
                     {% for card in cards %}
                         <td class="card">
