--- a/templates/allcards.html
+++ b/templates/allcards.html
@@ -7,17 +7,17 @@
     <body>
         <form action="/allcards" method="post">
             <table class="table">
-                {% for type in types %}
+                {% for i in range(1,4) %}
                 <tr>
-                    {% for card in cards where card['type'] = type%}
+                    {% for j in range(1,6)%}
                         <td class="card">
-                            <h2>{{ card['type'] }}</h2>
-                            <img src="{{ card['path'] }}" alt="{{ card['name'] }}">
-                            <h4>{{ card['name'] }}</h4>
+                            <h2>{{ cards[i*j-1]['type'] }}</h2>
+                            <img src="{{ cards[i*j-1]['path'] }}" alt="{{ cards[i*j-1]['name'] }}">
+                            <h4>{{ cards[i*j-1]['name'] }}</h4>
                         </td>
                     {% endfor %}
                 </tr>
-
+                {% endfor %}
                 <tr>
                     <td class="card">
                             <h2>Weapon</h2>
