--- a/templates/allcards.html
+++ b/templates/allcards.html
@@ -11,93 +11,13 @@
                 <tr>
                     {% for j in range(5)%}
                         <td class="card">
-                            <h2>{{ cards[5*j + i]['type'] }}</h2>
-                            <img src="{{ cards[5*j + i]['path'] }}" alt="{{ cards[5*j + i]['name'] }}">
-                            <h4>{{ cards[5*j + i]['name'] }}</h4>
+                            <h2>{{ cards[5*i+j]['type'] }}</h2>
+                            <img src="{{ cards[5*i+j]['path'] }}" alt="{{ cards[5*i+j]['name'] }}">
+                            <h4>{{ cards[5*i+j]['name'] }}</h4>
                         </td>
                     {% endfor %}
                 </tr>
                 {% endfor %}
-                <tr>
-                    <td class="card">
-                            <h2>Weapon</h2>
-                            <img src="/static/lead_pipe.jpeg" alt="lead pipe">
-                            <h4>Lead Pipe</h4>
-                    </td>
-                    <td class="card">
-                        <h2>Weapon</h2>
-                        <img src="/static/rope.png" alt="rope">
-                        <h4>Rope</h4>
-                    </td>
-                    <td class="card">
-                        <h2>Weapon</h2>
-                        <img src="/static/trophy.png" alt="trophy">
-                        <h4>Trophy</h4>
-                    </td>
-                    <td class="card">
-                        <h2>Weapon</h2>
-                        <img src="/static/kife.webp" alt="knife">
-                        <h4>Knife</h4>
-                    </td>
-                    <td class="card">
-                        <h2>Weapon</h2>
-                        <img src="/static/candle.jpeg" alt="candlestick">
-                        <h4>Candlestick</h4>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="card">
-                        <h2>Place</h2>
-                        <img src="/static/gsas.jpeg" alt="gsas">
-                        <h4>GSAS</h4>
-                    </td>
-                    <td class="card">
-                        <h2>Place</h2>
-                        <img src="/static/mem_church.jpeg" alt="memorial church">
-                        <h4>Memorial Church</h4>
-                    </td>
-                    <td class="card">
-                        <h2>Place</h2>
-                        <img src="/static/widener.jpeg" alt="widner">
-                        <h4>Widner</h4>
-                    </td>
-                    <td class="card">
-                        <h2>Place</h2>
-                        <img src="/static/canaday.jpeg" alt="canaday">
-                        <h4>Canaday</h4>
-                    </td> <td class="card">
-                        <h2>Place</h2>
-                        <img src="/static/mass_hall.jpeg" alt="massachusetts hall">
-                        <h4>Massachusetts Hall</h4>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="card">
-                        <h2>Person</h2>
-                        <img src="/static/download.jpeg" alt="john harvard">
-                        <h4>John Harvard</h4>
-                    </td>
-                    <td class="card">
-                        <h2>Person</h2>
-                        <img src="/static/pres_gay.jpeg" alt="president gay">
-                        <h4>President Gay</h4>
-                    </td>
-                    <td class="card">
-                        <h2>Person</h2>
-                        <img src="/static/remy.jpeg" alt="remy">
-                        <h4>Remy</h4>
-                    </td>
-                    <td class="card">
-                        <h2>Person</h2>
-                        <img src="/static/malan.jpeg" alt="malan">
-                        <h4>David Malan</h4>
-                    </td>
-                    <td class="card">
-                        <h2>Person</h2>
-                        <img src="/static/dean_k.jpeg" alt="dean khurana">
-                        <h4>Dean Khurana</h4>
-                    </td>
-                </tr>
         </form>
     </body>
 </html>
