--- a/templates/guess.html
+++ b/templates/guess.html
@@ -10,11 +10,15 @@
             <p class="header">Location: {{ get_flashed_messages() | join(" ")}}</p>
             <select class="text" id="weapon" name="weapon">
                 <option disabled selected>Select a weapon</option>
-                <option value="weapon1">weapon- eventually, use a for-loop to go through all the player's weapon cards</option>
+                {% for weapon in weapons %}
+                    <option value="{{ weapon['id'] }}">{{ weapon['name'] }}</option>
+                {% endfor %}
             </select>
             <select class="text" id="person" name="person">
                 <option disabled selected>Select a suspect</option>
-                <option value="person1">people- eventually, use a for-loop to go through all the player's people cards</option>
+                {% for person in people %}
+                    <option value="{{ person['id'] }}">{{ person['name'] }}</option>
+                {% endfor %}
             </select>
             <button name="submit" type="submit">Submit</button>
         </form>
