--- a/templates/guess.html
+++ b/templates/guess.html
@@ -7,7 +7,7 @@
     <body>
         <form action="/guess" method="post">
             <p>guess page</p>
-            <p class="header">Location: {{ get_flashed_messages() | join(" ")}}</p>
+            <p class="header" name="place">{{ get_flashed_messages() | join(" ")}}</p>
             <select class="text" id="weapon" name="weapon">
                 <option disabled selected>Select a weapon</option>
                 {% for weapon in weapons %}
