Tue, Dec 5, 2023, 4:16 PM -05:00

--- a/templates/allcards.html
+++ b/templates/allcards.html
@@ -18,7 +18,7 @@
                     {% endfor %}
                 </tr>
                 {% endfor %}
-                <button><a href="/gameboard2">Game Board</a></button>
+                <button><a href="/mycards">Return</a></button>
         </form>
     </body>
 </html>
