--- a/templates/mycards.html
+++ b/templates/mycards.html
@@ -8,25 +8,27 @@
         <link href="/static/styles.css" rel="stylesheet">
     </head>
     <body class="body">
-        {% for i in range(3) %}
-            <tr>
-                {% for j in range(5)%}
-                    {% if cards[5*i+j][player_id] is current_player %}
-                        <td class="card">
-                            <h2>{{ cards[5*i+j]['type'] }}</h2>
-                            <img src="{{ cards[5*i+j]['path'] }}" alt="{{ cards[5*i+j]['name'] }}">
-                            <h4>{{ cards[5*i+j]['name'] }}</h4>
-                        </td>
-                    {% endif %}
-                {% endfor %}
-            </tr>
-        {% endfor %}
-        <div class="text">
-            Now that you know your own cards, click below to see all of the available options or go to the gameboard.
-        </div>
-        <h1 class="header1">The Card Options</h1>
-        <button><a href="/allcards">All Cards</a></button>
-        <h1 class="header1">The Game Board</h1>
-        <button><a href="/gameboard2">Game Board</a></button>
+        <form action="/mycards" method="post">
+            {% for i in range(3) %}
+                <tr>
+                    {% for j in range(5)%}
+                        {% if cards[5*i+j][player_id] is current_player %}
+                            <td class="card">
+                                <h2>{{ cards[5*i+j]['type'] }}</h2>
+                                <img src="{{ cards[5*i+j]['path'] }}" alt="{{ cards[5*i+j]['name'] }}">
+                                <h4>{{ cards[5*i+j]['name'] }}</h4>
+                            </td>
+                        {% endif %}
+                    {% endfor %}
+                </tr>
+            {% endfor %}
+            <div class="text">
+                Now that you know your own cards, click below to see all of the available options or go to the gameboard to select a location.
+            </div>
+            <h1 class="header1">The Card Options</h1>
+            <button><a href="/allcards">All Cards</a></button>
+            <h1 class="header1">The Game Board</h1>
+            <button type="submit">Game Board</button>
+        </form>
     </body>
 </html>
