Wed, Dec 6, 2023, 1:16 PM -05:00

--- a/templates/mycards.html
+++ b/templates/mycards.html
@@ -26,7 +26,7 @@
                 Now that you know your own cards, click below to see all of the available options or go to the gameboard to select a location.
             </div>
             <h1 class="header1">The Card Options</h1>
-            <button><a href="/allcards">All Cards</a></button>
+            <button type="button"><a href="/allcards">All Cards</a></button>
             <h1 class="header1">The Game Board</h1>
             <button type="submit">Game Board</button>
         </form>
