Wed, Dec 6, 2023, 1:26 PM -05:00

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -9,7 +9,7 @@
         <link href="/static/styles.css" rel="stylesheet">
     </head>
     <body class="body">
-        <form action="/start" method="post">
+        <form action="/" method="post">
             <div class="alert alert-primary" role="alert">
                 Welcome to CS50 Clue! The CS50 duck has been tragically murdered and you are tasked with discovering the contents of the murder. The rules follow that of regular clue, with Harvard Hall in the center being the place you go to submit your final answers. Best of Luck.
             </div>
