--- a/static/styles.css
+++ b/static/styles.css
@@ -40,3 +40,17 @@
     width: 45%;
     height: auto;
 }
+
+.img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 85%;
+}
+
+.pool {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 85%;
+}
