Wed, Dec 6, 2023, 4:33 PM -05:00

--- a/templates/gameboard2.html
+++ b/templates/gameboard2.html
@@ -11,20 +11,23 @@
                 </div>
             </h1>
             <div class="container">
-                <img src="/static/gsas.jpeg" alt="gsas" style="width:100%">
-                <button class="room" name="room" value="Harvard Hall" type="submit" style="top: 0px; left: 0px">
+                <img class="img" src="/static/better_grid.png" alt="background">
+                <button class="room" name="room" value="Massachusetts Hall" type="submit" style="width:20%; height:30%; top:150px; left: 150px">
+                    <img src="/static/mass_hall.jpeg" alt="mass hall">
+                </button>
+                <button class="room" name="room" value="Harvard Hall" type="submit" style="width:20%; height:30%; top:300px; left: 600px">
                     <img src="/static/harvard_hall.jpeg" alt="harvard hall">
                 </button>
-                <button class="room" name="room" value="Mem Church" type="submit" style="top: 0px; right: 0px">
+                <button class="room" name="room" value="Mem Church" type="submit" style="width:15%; height:40%; top:0px; right: 150px">
                     <img src="/static/mem_church.jpeg" alt="mem church">
                 </button>
-                <button class="room" name="room" value="Canaday" type="submit" style="top: 0px; left: 0px">
-                    <p>Canaday</p>
+                <button class="room" name="room" value="Canaday" type="submit" style="width:25%; height:30%; top:0px; right: 525px">
+                    <img src="/static/canaday.jpeg" alt="canaday">
                 </button>
-                <button class="room" name="room" value="GSAS" type="submit" style="top: 15%; left: 0px">
+                <button class="room" name="room" value="GSAS" type="submit" style="width:25%; height:30%; bottom:0px; left: 150px">
                     <img src="/static/gsas.jpeg" alt="gsas">
                 </button>
-                <button class="room" name="room" value="Widener" type="submit" style="top: 0px; left: 15%">
+                <button class="room" name="room" value="Widener" type="submit" style="width:25%; height:30%; top:150px; left: 150px">
                     <img src="/static/widener.jpeg" alt="widener">
                 </button>
             </div>
