Wed, Dec 6, 2023, 4:35 PM -05:00

--- a/templates/gameboard2.html
+++ b/templates/gameboard2.html
@@ -27,7 +27,7 @@
                 <button class="room" name="room" value="GSAS" type="submit" style="width:25%; height:30%; bottom:0px; left: 150px">
                     <img src="/static/gsas.jpeg" alt="gsas">
                 </button>
-                <button class="room" name="room" value="Widener" type="submit" style="width:25%; height:30%; top:150px; left: 150px">
+                <button class="room" name="room" value="Widener" type="submit" style="width:25%; height:30%; bottom:0px; right: 150px">
                     <img src="/static/widener.jpeg" alt="widener">
                 </button>
             </div>
