--- a/templates/gameboard2.html
+++ b/templates/gameboard2.html
@@ -15,7 +15,7 @@
                 <button class="room" name="room" value="Massachusetts Hall" type="submit" style="width:20%; height:30%; top:150px; left: 150px">
                     <img src="/static/mass_hall.jpeg" alt="mass hall">
                 </button>
-                <button class="room" name="room" value="Harvard Hall" type="submit" style="width:20%; height:30%; top:300px; left: 600px">
+                <button class="pool" name="room" value="Harvard Hall" type="submit" style="width:20%; height:30%; top:300px; left: 600px">
                     <img src="/static/harvard_hall.jpeg" alt="harvard hall">
                 </button>
                 <button class="room" name="room" value="Mem Church" type="submit" style="width:15%; height:40%; top:0px; right: 150px">
