--- a/templates/reveal.html
+++ b/templates/reveal.html
@@ -6,19 +6,11 @@
     </head>
     <body>
         <form action="/revealcards" method="post">
-            <p>reveal page</p>
-            <select class="form-select mx-auto w-auto" id="weapon" name="weapon">
-                <option disabled selected>Select a weapon</option>
-                <option value="weapon1">weapon</option>
-            </select>
-            <select class="form-select mx-auto w-auto" id="person" name="person">
-                <option disabled selected>Select a suspect</option>
-                <option value="person1">people</option>
-            </select>
-            <select class="form-select mx-auto w-auto" id="person" name="person">
-                <option disabled selected>Select a location</option>
-                <option value="room1">room</option>
-            </select>
+            <select class="text" id="person" name="person">
+                <option disabled selected>Select a card to reveal</option>
+                {% for card in player_cards %}
+                    <option value="{{ card['id'] }}">{{ card['name'] }}</option>
+                {% endfor %}
             <button name="submit" type="submit">Submit</button>
         </form>
     </body>
