Wed, Dec 6, 2023, 5:12 PM -05:00

--- a/templates/allcards.html
+++ b/templates/allcards.html
@@ -17,6 +17,7 @@
                 {% endfor %}
             </tr>
             {% endfor %}
+        </table>
             <button><a href="/mycards">Return</a></button>
     </body>
 </html>
