Wed, Dec 6, 2023, 6:48 PM -05:00

--- a/templates/reveal.html
+++ b/templates/reveal.html
@@ -11,6 +11,7 @@
                 {% for card in player_cards %}
                     <option value="{{ card['id'] }}">{{ card['name'] }}</option>
                 {% endfor %}
+            </select>
             <button name="submit" type="submit">Submit</button>
         </form>
     </body>
