--- a/static/styles.css
+++ b/static/styles.css
@@ -54,3 +54,10 @@
     margin-right: auto;
     width: 85%;
 }
+
+.main {
+    background-color: #e0e0e0;
+    padding: 10px;
+    border-radius: 10px;
+    text-align: center;
+}
