Wed, Dec 6, 2023, 7:11 PM -05:00

--- a/static/styles.css
+++ b/static/styles.css
@@ -55,9 +55,6 @@
     width: 85%;
 }
 
-.main {
-    background-color: #e0e0e0;
-    padding: 10px;
-    border-radius: 10px;
-    text-align: center;
+.button {
+    
 }
