--- a/templates/harvard.html
+++ b/templates/harvard.html
@@ -7,7 +7,7 @@
     <body class="body">
         <form action="/finalguess" method="post">
             <h1 class="header">Final Guess</h1>
-            <div class="text">
+            <div class="body">
                 It was
                 <div class="mb-3">
                     <select class="form-select mx-auto w-auto" name="person">
