--- a/templates/mycards.html
+++ b/templates/mycards.html
@@ -25,7 +25,7 @@
                 {% endfor %}
             </table>
         </table>
-            <div class="text">
+            <div class="body">
                 Now that you know your own cards, click below to see all of the available options or go to the gameboard to select a location.
             </div>
             <h1 class="header1">The Card Options</h1>
