--- a/static/styles.css
+++ b/static/styles.css
@@ -55,3 +55,8 @@ button {
     background-color: white;
     border-color: rgba(150, 0, 0, 0.8);
 }
+
+.center {
+    justify-content: center;
+    align-items: center;
+}
