--- a/templates/guess.html
+++ b/templates/guess.html
@@ -6,20 +6,22 @@
     </head>
     <body>
         <form action="/guess" method="post">
-            <p class="header" name="place" value="{{ place }}">{{ place }}</p>
-            <select class="body" id="weapon" name="weapon">
-                <option disabled selected>Select a weapon</option>
-                {% for weapon in weapons %}
-                    <option value="{{ weapon['id'] }}">{{ weapon['name'] }}</option>
-                {% endfor %}
-            </select>
-            <select class="body" id="person" name="person">
-                <option disabled selected>Select a suspect</option>
-                {% for person in people %}
-                    <option value="{{ person['id'] }}">{{ person['name'] }}</option>
-                {% endfor %}
-            </select>
-            <button name="submit" type="submit">Submit</button>
+            <div class="center">
+                <p class="header" name="place" value="{{ place }}">{{ place }}</p>
+                <select class="body" id="weapon" name="weapon">
+                    <option disabled selected>Select a weapon</option>
+                    {% for weapon in weapons %}
+                        <option value="{{ weapon['id'] }}">{{ weapon['name'] }}</option>
+                    {% endfor %}
+                </select>
+                <select class="body" id="person" name="person">
+                    <option disabled selected>Select a suspect</option>
+                    {% for person in people %}
+                        <option value="{{ person['id'] }}">{{ person['name'] }}</option>
+                    {% endfor %}
+                </select>
+                <button name="submit" type="submit">Submit</button>
+            </div>
         </form>
     </body>
 </html>
