Wed, Dec 6, 2023, 7:27 PM -05:00

--- a/templates/reveal.html
+++ b/templates/reveal.html
@@ -7,7 +7,9 @@
     <body>
         <form action="/revealcards" method="post">
             <div class="center">
-                <
+                <div class="body">
+                    Select one card from your hand to reveal to your opponent
+                </div>
                 <select class="body" id="person" name="person">
                     <option disabled selected>Select a card to reveal</option>
                     {% for card in player_cards %}
