Wed, Dec 6, 2023, 7:29 PM -05:00

--- a/templates/reveal.html
+++ b/templates/reveal.html
@@ -8,7 +8,7 @@
         <form action="/revealcards" method="post">
             <div class="center">
                 <div class="body">
-                    Select one card from your hand to reveal to your opponent
+                    Select one card from your hand to reveal to your opponent, or select "no cards to reveal" if you do not have any of the options in your hand.
                 </div>
                 <select class="body" id="person" name="person">
                     <option disabled selected>Select a card to reveal</option>
