Wed, Dec 6, 2023, 8:10 PM -05:00

--- a/templates/harvard.html
+++ b/templates/harvard.html
@@ -4,7 +4,7 @@
     <head>
         <title>Final Guess</title>
     </head>
-    <body class="body">
+    <body>
         <form action="/finalguess" method="post">
             <div class="center">
                 <h1 class="header">Final Guess</h1>
