--- a/templates/harvard.html
+++ b/templates/harvard.html
@@ -10,19 +10,15 @@
                 <h1 class="header">Final Guess</h1>
                 <div class="body">
                     It was
-                    <div class="mb-3">
-                        <select class="form-select mx-auto w-auto" name="person">
-                            <option disabled="" selected="">Person</option>
-                            <option value="{{ cards['person'] }}">{{ cards['person'] }}</option>
-                        </select>
-                    </div> <br>
+                    <select class="form-select mx-auto w-auto" name="person">
+                        <option disabled="" selected="">Person</option>
+                        <option value="{{ cards['person'] }}">{{ cards['person'] }}</option>
+                    </select>
                     with the
-                    <div class="mb-3">
-                        <select class="form-select mx-auto w-auto" name="weapon">
-                            <option disabled="" selected="">Weapon</option>
-                            <option value="{{ cards['weapon'] }}">{{ cards['weapon'] }}</option>
-                        </select>
-                    </div> <br>
+                    <select class="body" name="weapon">
+                        <option disabled selected>Weapon</option>
+                        <option value="{{ cards['weapon'] }}">{{ cards['weapon'] }}</option>
+                    </select>
                     in
                     <div class="mb-3">
                         <select class="form-select mx-auto w-auto" name="place">
